bugfix: card missing border on high contrast mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -160,6 +160,7 @@ video {
 // Card Partials
 .card {
   width: 100%;
+  border-color: transparent;
   &.is-hoverable {
     &:hover {
       img {
